add user stats endpoint
